# advent-of-code-2024

./: .gitignore  README.md
R/: README.md
R/R/: DESCRIPTION  Makefile  test_day1.R
R/day1/: day1.R
R/day1/tests/testthat/: test-day1.R
R/day3/: Makefile  day3.R  test_day3.R
R/tests/day3/: test_solution.R
clj/: README.md  deps.edn
clj/src/advent_of_code_2024_clj/: day1.clj  day10.clj  day11.clj  day12.clj  day13.clj  day14.clj  day15.clj  day16.clj  day17.clj  day18.clj  day19.clj  day2.clj  day20.clj  day21.clj  day22.clj  day23.clj  day24.clj  day25.clj  day3.clj  day4.clj  day5.clj  day6.clj  day7.clj  day8.clj  day9.clj
clj/test/advent_of_code_2024_clj/: day15_test.clj  day1_test.clj  day21_test.clj  day5_test.clj
elixir/: run_day1.exs
elixir/lib/: day1.ex  day10.ex  day2.ex  day3.ex  day5.ex  day7.ex  day8.ex
elixir/test/: day10_test.exs  day1_test.exs  day2_test.exs  day3_test.exs  day5_test.exs  day8_test.exs
python/: README.md  day1.py  pyproject.toml  test_day1.py
python/aoc2024/day01/: solution.py
python/tests/: test_day01.py
src/advent_of_code_2024_clj/: day1.clj
test/advent_of_code_2024_clj/: day1_test.clj
