[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aoc2024"
version = "0.1.0"
authors = [
    { name = "Your Name" },
]
description = "Advent of Code 2024 Solutions"
readme = "README.md"
requires-python = ">=3.8"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.hatch.build.targets.wheel]
packages = ["aoc2024"]
